# zama-challenge

./: .gitignore  LICENSE  README.md  docker-compose.yml
challenge-frontend/: Dockerfile  package.json  webpack.config.js
challenge-frontend/src/: api.js  index.html  index.js  styles.css
envs/zama-challenge/: .env
rust-lib/: Cargo.toml
rust-lib/pkg/: package.json  rust_merkle.d.ts  rust_merkle.js  rust_merkle_bg.js  rust_merkle_bg.wasm  rust_merkle_bg.wasm.d.ts
rust-lib/src/: lib.rs
zama-challenge/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py
zama-challenge/src/zama-challenge/: __init__.py  config.py  dependencies.py  exceptions.py  logging.json  main.py  routers.py  schemas.py
zama-challenge/src/zama-challenge/crud/: base.py  file.py
zama-challenge/src/zama-challenge/database/: database.py
zama-challenge/src/zama-challenge/merkle_tree/: m_tree_generator.py
zama-challenge/src/zama-challenge/models/: models.py
